<resources>
    <string name="app_name">动画</string>
    <string name="tradition_animation">传统动画</string>
    <string name="frame_animation">帧动画</string>
    <string name="tweened_animation">补间动画</string>
    <string name="property_animation">属性动画</string>
    <string name="type_xml">xml实现</string>
    <string name="type_java">java实现</string>
    <string name="alpha">alpha</string>
    <string name="scale">scale</string>
    <string name="translate">translate</string>
    <string name="rotate">rotate</string>
    <string name="combine">combine</string>
    <string name="simple_property_animation1">简单属性动画1</string>
    <string name="simple_property_animation2">简单属性动画2</string>
    <string name="simple_property_animation3">简单属性动画3</string>
    <string name="simple_property_animation4">简单属性动画4</string>
    <string name="complicate_property_animation">复杂属性动画</string>
    <string name="test_string">Test Demo</string>
</resources>
